--- a/react/my-app/package.json
+++ b/react/my-app/package.json
@@ -14,7 +14,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "predeploy": "yarn run build",
+   "deploy": "gh-pages -d build"
 
 
   },
