--- a/react/my-app/package.json
+++ b/react/my-app/package.json
@@ -9,8 +9,11 @@
     "gh-pages": "^2.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-vis": "^1.11.7",
+    "redux": "^4.0.4",
     "stylus": "^0.54.5"
   },
   "scripts": {
