--- a/react/my-app/package.json
+++ b/react/my-app/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
     "gh-pages": "^2.1.0",
+    "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
