--- a/react/my-app/package.json
+++ b/react/my-app/package.json
@@ -10,9 +10,11 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-markdown": "^4.1.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-syntax-highlighter": "^11.0.2",
     "react-vis": "^1.11.7",
     "redux": "^4.0.4",
     "stylus": "^0.54.5"
