--- a/react/my-app/package.json
+++ b/react/my-app/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
+    "classnames": "^2.2.6",
     "gh-pages": "^2.1.0",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
